@@ -53,6 +53,7 @@ package lu.fisch.structorizer.parsers;
  *      Kay Gürtzig     2020-03-09      Issue #835: New import option and method for insertion of structure preference keywords
  *      Kay Gürtzig     2020-04-24      Method cleanComment() improved (indentation trimmed, empty lines dropped)
  *      Kay Gürtzig     2022-07-20      Enh. #1046: Decoding mechanism for token names to actual symbols
+ *      Kay Gürtzig     2022-07-29      Issue #1051: New methods getSubRoot() and removeRoot() to support COBOL tidying
  *
  ******************************************************************************************************
  *
@@ -267,6 +268,39 @@ public abstract class CodeParser extends javax.swing.filechooser.FileFilter impl
 		return this.subRoots.size();
 	}
 	// END KGU#537 3018-07-01
+	
+	// START KGU#1043 2022-07-29: Enh. #1051 Auxiliary methods for COBOL cleanup
+	/**
+	 * Searches for a registered sub-{@link Root} with given title text and returns it
+	 * if found
+	 * 
+	 * @param title - the first text line of the requested diagram
+	 * @return either a matching imported {@link Root} or {@code null}
+	 */
+	protected Root getSubRoot(String title)
+	{
+		for (Root root: this.subRoots) {
+			if (title.equals(root.getText().get(0))) {
+				return root;
+			}
+		}
+		return null;
+	}
+	
+	/**
+	 * Removes the first occurrence of the given {@link Root} {@code root} from the
+	 * list of generated diagrams.<br/>
+	 * <b>CAUTION</b>: This operation may impose a consistency risk and could provoke
+	 * stale references, so you should absolutely know what you do!
+	 * 
+	 * @param root - the {@link Root} to be removed if present
+	 * @return {@code true} if the list had contained the element
+	 */
+	protected boolean removeRoot(Root root)
+	{
+		return this.subRoots.remove(root);
+	}
+	// END KGU#1043 2022-07-29
 
 	// START KGU#395 2017-05-26: Enh. #357 - parser-specific options
 	private final HashMap<String, Object> optionMap = new HashMap<String, Object>();
